--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,6 +2,7 @@ env:
   browser: true
   commonjs: true
   es6: true
+  jest: true
 extends:
   - airbnb-base
 globals:
@@ -11,6 +12,7 @@ parserOptions:
   ecmaVersion: 2018
 rules:
   arrow-parens: [error, as-needed]
+  no-confusing-arrow: 0
   object-curly-spacing: [error, never]
   no-console: off
   max-len: [warn, {code: 80}]
