--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/gschenk/bicycleGearCalc#readme",
   "dependencies": {
-    "jest": "^25.1.0"
+    "jest": "^25.1.0",
+    "js-yaml": "^3.13.1"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
