--- a/templates/input.defaults.yml
+++ b/templates/input.defaults.yml
@@ -5,15 +5,15 @@ bottom bracket:
 chain:
     elongation: 0.01
     pitch: 0.5 in
-    roller diametre: 7.75
+    roller diametre: 7.75 mm
 chainring:
     teeth: 44
-    chainline: 43.5
+    chainline: 43.5 mm
 chainstay:
     length: 405 mm
 cog:
     teeth: 16
-    chainline: 43.5
+    chainline: 43.5 mm
 dropouts:
     distance: 130 mm
 tyre:
