adds tests for Unit, tools.sorter, fixes Unit bugs
- Tests for Unit objects added.

- Input keys sorted to make class output more predictable for tests.

- Nice pure sort function. Not very performant. Only use for short arrays.

- Changed ESlint rules to allow nested ternaries, pure functions difficult
otherwise. Also more freedom in ternary formatting.

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -16,3 +16,5 @@ rules:
   object-curly-spacing: [error, never]
   no-console: off
   max-len: [warn, {code: 80}]
+  no-nested-ternary: off
+  indent: [error, 2, ignoredNodes: [ConditionalExpression]]
