Squashed commit of the following:
commit 5da61ba6f169488a8ce87a08d1fa77e124453cab
Author: gerald schenk <gschenk@gmx.net>
Date:   Tue Feb 11 18:10:29 2020 +0100

    extends chain length calc to arrays of teeth values

commit f9500af7d661bd0ac8dc866820831e58a7c3f69b
Author: gerald schenk <gschenk@gmx.net>
Date:   Tue Feb 11 17:21:41 2020 +0100

    adds array input feature for numbers

--- a/templates/input.complete.yml
+++ b/templates/input.complete.yml
@@ -7,12 +7,12 @@ chain:
     pitch: length
     roller diametre: length
 chainring:
-    teeth: number
+    teeth: number array
     chainline: length
 chainstay:
     length: length
 cog:
-    teeth: number
+    teeth: number array
     chainline: length
 drivetrain:
     length: length
