new feature, calc drivetrain length from geometry
Squashed commit of the following:

commit b6c713b654865157dc5e54859a9d55e2721cb425
Author: gerald schenk <gschenk@gmx.net>
Date:   Wed Feb 12 12:13:25 2020 +0100

    adds test for drivetrain length calc

commit b9b08cc83d5b357e2fd1d4c761b8d63e1b4a5041
Author: gerald schenk <gschenk@gmx.net>
Date:   Wed Feb 12 02:23:12 2020 +0100

    adds feature: calc drivetrain length from geometry

--- a/templates/input.complete.yml
+++ b/templates/input.complete.yml
@@ -11,6 +11,7 @@ chainring:
     chainline: length
 chainstay:
     length: length
+    offset: length
 cog:
     teeth: number array
     chainline: length
@@ -18,6 +19,7 @@ drivetrain:
     length: length
 dropouts:
     distance: length
+    thickness: length
 tyre:
     bead diametre: length
     width: length
