--- a/templates/input.defaults.yml
+++ b/templates/input.defaults.yml
@@ -19,5 +19,8 @@ dropouts:
 tyre:
     bead diametre: 622 mm
     width: 28 mm
+    depression: 0.15
 drivetrain:
     length: 425 mm
+misc:
+    cadence: 1 Hz     
